<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".SettingActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/StartShow"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:layout_marginTop="4dp"
        android:background="@color/foreground"
        android:focusable="auto"
        android:focusableInTouchMode="true"
        android:nextFocusUp="@id/Scale"
        android:nextFocusDown="@id/Brightness"
        android:onClick="startShow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Marker1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/marker"
            android:textColor="@color/accent"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/marker" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/show_button"
            android:textColor="@color/text_col"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/Marker1"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/Brightness"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:background="@color/foreground"
        android:focusable="auto"
        android:focusableInTouchMode="true"
        android:nextFocusUp="@id/StartShow"
        android:nextFocusDown="@id/Folder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StartShow">

        <TextView
            android:id="@+id/Marker2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/marker"
            android:textColor="@color/accent"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/marker" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/br_button"
            android:textColor="@color/text_col"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/Marker2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/brightnessValView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:textColor="@color/accent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck"
            tools:text="100%" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/Folder"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:background="@color/foreground"
        android:focusable="auto"
        android:focusableInTouchMode="true"
        android:nextFocusUp="@id/Brightness"
        android:nextFocusDown="@id/Speed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Brightness">

        <TextView
            android:id="@+id/Marker3"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/marker"
            android:textColor="@color/accent"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/marker" />

        <TextView
            android:id="@+id/tw1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/fd_button"
            android:textColor="@color/text_col"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/Marker3"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/folderView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:textColor="@color/accent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck"
            tools:text="set1" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/Speed"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:layout_marginTop="228dp"
        android:background="@color/foreground"
        android:focusable="auto"
        android:focusableInTouchMode="true"
        android:nextFocusUp="@id/Folder"
        android:nextFocusDown="@id/Scale"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Folder">

        <TextView
            android:id="@+id/Marker4"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/marker"
            android:textColor="@color/accent"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/marker" />

        <TextView
            android:id="@+id/tw2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/speed_button"
            android:textColor="@color/text_col"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/Marker4"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/delayView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:textColor="@color/accent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck"
            tools:text="5 мин." />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/Scale"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:background="@color/foreground"
        android:focusable="auto"
        android:focusableInTouchMode="true"
        android:nextFocusUp="@id/Speed"
        android:nextFocusDown="@id/StartShow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Speed">

        <TextView
            android:id="@+id/Marker5"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/marker"
            android:textColor="@color/accent"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/marker" />

        <TextView
            android:id="@+id/tw3"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/scale_button"
            android:textColor="@color/text_col"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/Marker5"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/scaleView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:textColor="@color/accent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck"
            tools:text="Без изменений" />
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/keyCodeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:textColor="@color/accent"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="key code: 66" />

</android.support.constraint.ConstraintLayout>